<resources>
	<string name="app_name">Sentence Generator</string>

	<string name="first_title">I Love You</string>
	<string name="action_settings">Settings</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_search">Search</string>
	<string name="action_save">Save</string>
	<string name="action_delete">Delete</string>
	<string name="action_change_genre">Change genre</string>

	<string name="delete_dialog_title">Warning!!</string>
	<string name="delete_msg">Are you sure you want to delete?</string>
	<string name="save_msg">Save completed</string>
	<string name="update_msg">Update completed</string>
	<string name="generated_msg">Generation completed</string>
	<string name="generated_list_title">Generated sentence list : %s</string>
	<string name="sentence_count">Sentence count</string>

	<string name="new_word_input">New word input</string>
	<string name="word_sync">Word sync</string>
	<string name="show_word_input">Show word</string>
	<string name="adverb_input">Adverb input</string>
	<string name="verb_input">Verb input</string>
	<string name="noun_input">Noun input</string>

	<string name="adjective">Adjective</string>
	<string name="adverb">Adverb</string>
	<string name="verb">Verb</string>
	<string name="noun">Noun</string>

	<string-array name="word_list">
		<item>@string/noun</item>
		<item>@string/verb</item>
		<item>@string/adverb</item>
		<item>@string/adjective</item>
	</string-array>

	<string name="input">Input</string>

	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="update">Update</string>

	<string name="generate">Generate</string>
	<string name="show_history">Show History</string>
	<string name="show_favorite">Show Favorite</string>
	<string name="back">Back</string>
	<string name="title_activity_input">Input Screen</string>

	<string name="title_noun">Noun</string>
	<string name="title_verb">Verb</string>
	<string name="title_adverb">Adverb</string>
	<string name="title_adjective">Adjective</string>

	<string name="title_activity_sentence">Sentence Screen (%s)</string>

	<string name="title_generated">Generated (%s)</string>
	<string name="title_favorite">Favorite (%s)</string>

	<string name="generate_target_select_menu_title">Select..</string>
	<string name="cancel">Cancel</string>
	<string name="create">Create</string>
	<string name="make">Make</string>
	<string name="ok">OK</string>

	<string name="no_selected_alert_title">Alert</string>
	<string name="no_selected_alert_msg">You must select one!</string>

	<string name="poetry">Poetry</string>
	<string name="nursery_rime">Nursery rime</string>
	<string name="novel">Novel</string>
	<string name="essay">Essay</string>
	<string name="fairy_tale">Fairy tale</string>
	<string name="etc">ETC</string>

	<string name="new_word_genre_select_dialog_title">Genre select</string>
	<string-array name="genre_list">
		<item>@string/poetry</item>
		<item>@string/nursery_rime</item>
		<item>@string/novel</item>
		<item>@string/essay</item>
		<item>@string/fairy_tale</item>
		<item>@string/etc</item>
	</string-array>

	<string name="new_word_input_title">New word input (%s)</string>
	<string name="show_word_input_title">Show word (%s)</string>

	<string name="select_all_setting">Select all</string>
	<string name="select_none_setting">Select none</string>
	<string name="delete_setting">Delete selection</string>

	<string name="save_dialog_title">Save</string>
	<string name="save_dialog_ok">Save</string>
	<string name="save_dialog_msg">Input name</string>

	<string name="save_data_empty">Save data is empty</string>

	<string name="save_sentence_category_done">Save sentence category done</string>

	<string name="no_favorite_item">No favorite item</string>
	<string name="warning_title">Warning</string>

	<string name="empty" />
	<string name="action_rate">Rate</string>
	<string name="rate_dialog_title">Rate</string>
	<string name="title_activity_favorite_category">Favorite</string>
	<string name="favorite_category_name_tab_title">Name group (%s)</string>
	<string name="favorite_category_rate_tab_title">Rate group (%s)</string>
	<string name="delete_done">Delete done</string>
	<string name="no_delete_item">Delete item not found</string>
	<string name="no_select_sentence">Please item select</string>
	<string name="count_pattern">(%s)</string>

	<string name="title_activity_favorite_view">Favorite view</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="title_activity_database_manager">Database Manager</string>
	<string name="db_manager">DB Manager</string>
	<string name="title_activity_settings">Settings</string>

	<string name="settings_sentence_count_dialog_title">Sentence Count</string>
	<string name="settings_generate_count">Sentence Count</string>
	<string name="settings_generate_count_sub">Generate sentence count (%s)</string>
	<string-array name="settings_generate_count_list">
		<item>20</item>
		<item>30</item>
		<item>40</item>
		<item>50</item>
	</string-array>

	<string name="random">Random</string>
	<string name="empty_word">Empty</string>

	<string name="settings_first_word_dialog_title">First word choice</string>
	<string name="settings_second_word_dialog_title">Second word choice</string>
	<string name="settings_third_word_dialog_title">Third word choice</string>
	<string name="settings_fourth_word_dialog_title">Fourth word choice</string>

	<string name="settings_first_word">First word</string>
	<string name="settings_first_word_sub">Show (%s)</string>
	<string name="settings_second_word">Second word</string>
	<string name="settings_second_word_sub">Show (%s)</string>
	<string name="settings_third_word">Third word</string>
	<string name="settings_third_word_sub">Show (%s)</string>
	<string name="settings_fourth_word">Fourth word</string>
	<string name="settings_fourth_word_sub">Show (%s)</string>
	<string-array name="settings_word_list">
		<item>@string/noun</item>
		<item>@string/verb</item>
		<item>@string/adverb</item>
		<item>@string/adjective</item>
		<item>@string/random</item>
		<item>@string/empty_word</item>
	</string-array>

	<string name="upload_db_file">Upload DB file</string>
	<string name="db_local_backup">DB Local backup</string>
	<string name="db_upgrade">DB Upgrade from server</string>
	<string name="db_upload">DB Upload to server</string>
	<string name="progress_upload_db">Uploading file…</string>
	<string name="db_upload_start">Uploading started…</string>
	<string name="progress_upgrade_db">Upgrade Database…</string>
	<string name="start_db_upgrade">Database upgrade(download) started : %s</string>
	<string name="db_upload_complete">DB File upload completed : %s</string>
	<string name="db_upload_fail">DB File upload fail : %s</string>
	<string name="db_backup_fail">Database backup fail</string>
	<string name="exception_msg">Got Exception (%s) : see logcat</string>
	<string name="source_file_not_exist">Source file not exist : %s</string>
	<string name="db_upgrade_complete">Database upgrade complete</string>
	<string name="db_upgrade_fail">Database upgrade fail : %s</string>
	<string name="start_db_upload">Uploading DB file path : %s</string>
	<string name="start_db_local_backup">Start DB Local storage backup : %s</string>
	<string name="db_local_backup_complete">Database backup completed to local assets storage : %s</string>
	<string name="db_local_backup_fail">Database backup fail to local assets storage</string>

	<string name="network_error">Network error : %s</string>

	<string name="title_modify_word_dialog">Modify</string>
	<string name="msg_modify_word_dialog">Edit word and press save button</string>
	<string name="modify_done">Modify done</string>

	<string name="msg_coming_soon">Coming soon.</string>
	<string name="made_by">Made by Hana Lee\nSince 2015 summer</string>
	<string name="progress_sync_db">Progress Database Sync</string>

	<string name="db_sync_fail">Database Sync Fail</string>
	<string name="db_sync_complete">Database Sync Complete</string>
	<string name="db_sync_confirm_dialog_title">Sync confirm</string>
	<string name="db_sync_confirm_dialog_msg">Are you sync now?</string>
</resources>
