<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="kr.co.leehana.sg.activity.InputActivity">

	<item android:id="@+id/action_settings"
	      android:title="@string/action_settings"
	      android:orderInCategory="100"
	      app:showAsAction="never"/>

	<item android:id="@+id/select_all_setting"
	      android:title="@string/select_all_setting"
	      android:orderInCategory="100"
	      app:showAsAction="never" />

	<item android:id="@+id/select_none_setting"
	      android:title="@string/select_none_setting"
	      android:orderInCategory="100"
	      app:showAsAction="never" />

	<item android:id="@+id/select_delete_setting"
	      android:title="@string/delete_setting"
	      android:orderInCategory="100"
	      android:icon="@drawable/trash_w"
	      app:showAsAction="always" />
</menu>
