<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="kr.co.leehana.sg.activity.SentenceActivity">

	<item android:id="@+id/action_rate"
	      android:title="@string/action_rate"
	      android:orderInCategory="100"
	      android:icon="@drawable/rate_w"
	      app:showAsAction="always"/>

	<item android:id="@+id/action_save"
	      android:title="@string/action_save"
	      android:orderInCategory="100"
	      android:icon="@drawable/save_w"
	      app:showAsAction="always"/>

	<item android:id="@+id/action_delete"
	      android:title="@string/action_delete"
	      android:orderInCategory="100"
	      android:icon="@drawable/trash_w"
	      app:showAsAction="always"/>

	<item android:id="@+id/action_settings"
	      android:title="@string/action_settings"
	      android:orderInCategory="100"
	      android:icon="@drawable/setting_w"
	      app:showAsAction="never"/>
</menu>
