<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/db_local_backup"
		android:id="@+id/btn_local_backup"
		android:layout_gravity="center_horizontal"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/db_upgrade"
		android:id="@+id/btn_db_upgrade"
		android:layout_gravity="center_horizontal"/>

	<Button
		android:id="@+id/btn_db_upload"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/db_upload"
		/>

	<TextView
		android:id="@+id/db_manager_msg"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text=""
		android:textColor="#000000"
		android:textStyle="bold" />

</LinearLayout>