<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background7"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:alpha="30"
                tools:context=".MainActivity">

	<TextView
		android:text="@string/first_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:id="@+id/first_title"
        android:textSize="34sp"
        android:gravity="center_vertical|center_horizontal"/>

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_below="@+id/first_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:weightSum="2"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/show_word_input"
            android:id="@+id/btn_show_word"
            android:textSize="20sp"
            android:paddingLeft="0sp"
            android:paddingRight="0sp"
            android:paddingTop="40sp"
            android:paddingBottom="40sp"
            android:background="#EE812C"
            android:textColor="#FDF5EE"
            android:layout_weight="1"
            android:layout_marginRight="15sp"/>

        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/word_sync"
            android:id="@+id/btn_word_sync"
            android:textSize="20sp"
            android:paddingLeft="0sp"
            android:paddingRight="0sp"
            android:paddingTop="40sp"
            android:paddingBottom="40sp"
            android:background="#A0C365"
            android:textColor="#FDF5EE"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
	    android:id="@+id/second_layout"
        android:layout_below="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="15sp"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/show_favorite"
            android:id="@+id/btn_show_favorite"
            android:textSize="20sp"
            android:paddingLeft="0sp"
            android:paddingRight="0sp"
            android:paddingTop="40sp"
            android:paddingBottom="40sp"
            android:background="#6FB2FE"
            android:textColor="#FDF5EE"
            android:layout_weight="1"
            android:layout_marginRight="15sp"/>

        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:id="@+id/btn_generate"
            android:textSize="20sp"
            android:paddingLeft="0sp"
            android:paddingRight="0sp"
            android:paddingTop="40sp"
            android:paddingBottom="40sp"
            android:background="#F7C03C"
            android:textColor="#FDF5EE"
            android:layout_weight="1"/>
    </LinearLayout>

	<TextView
		android:text="@string/made_by"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/made_by"
		android:textSize="24sp"
		android:gravity="center_vertical|center_horizontal"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"/>

</RelativeLayout>
